--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "noImplicitReturns": true,
+    "noImplicitAny": true,
     "moduleResolution": "node",
     "module": "commonjs",
-    "target": "esnext",
+    "target": "es5",
     "lib": [
       "esnext",
       "dom"
