--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
+  },
+  "peerDependencies": {
+    "eslint": ">=6.0.0"
   }
 }
