--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "module": "commonjs",
-    "target": "es5",
+    "target": "esnext",
     "lib": [
       "esnext",
       "dom"
