--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@dczajkowski/eslint-plugin",
   "version": "0.2.0",
   "main": "src/index.js",
+  "license": "MIT",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .ts",
