Improved the setup
Now it's not necessary to require experimental-utils manually

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "esModuleInterop": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
+    "skipDefaultLibCheck": true,
     "moduleResolution": "node",
     "module": "commonjs",
     "target": "esnext",
