--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
   "name": "@dczajkowski/eslint-plugin",
   "version": "0.4.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .ts --max-warnings=0",
-    "build": "tsc --project .",
+    "build": "esbuild src/{*.ts,**/*.ts} --format=cjs --outdir=dist/",
     "prepublish": "yarn build"
   },
   "devDependencies": {
-    "@types/eslint": "^6.1.1",
-    "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.5",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
-    "@typescript-eslint/typescript-estree": "^2.3.0",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.15",
+    "@types/eslint": "^8.4.3",
+    "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/typescript-estree": "^5.28.0",
+    "esbuild": "^0.14.45",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
-    "prettier": "^1.18.2",
-    "ts-jest": "^26.5.4",
-    "typescript": "^3.6.3"
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "eslint": ">=6.0.0"
+    "eslint": ">=8.0.0"
+  },
+  "dependencies": {
+    "@typescript-eslint/utils": "^5.28.0"
   }
 }
