--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.0",
   "main": "dist/index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --ext .ts --max-warnings=0",
@@ -25,7 +26,8 @@
     "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.1"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
