--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "lint": "eslint . --ext .ts --max-warnings=0",
-    "build": "tsc -p tsconfig.build.json",
-    "prepublish": "yarn build"
+    "lint": "eslint . --max-warnings=0",
+    "build": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
@@ -26,7 +25,7 @@
     "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2",
+    "typescript": "5.5.4",
     "typescript-eslint": "^8.8.1"
   },
   "peerDependencies": {
