Fix types and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "skipDefaultLibCheck": true,
-    "moduleResolution": "node",
-    "module": "commonjs",
+    "moduleResolution": "bundler",
+    "module": "preserve",
     "target": "esnext",
     "lib": [
       "esnext",
