--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^29.5.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
@@ -21,7 +21,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^28.1.1",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
@@ -32,6 +32,7 @@
     "eslint": ">=9.0.0"
   },
   "dependencies": {
+    "@typescript-eslint/rule-tester": "^8.8.1",
     "@typescript-eslint/utils": "^8.8.1"
   }
 }
