--- a/package.json
+++ b/package.json
@@ -7,32 +7,38 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint . --max-warnings=0",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "rm -rf dist && rollup -c && rm -rf dist/rules dist/helpers.*"
+  },
+  "dependencies": {
+    "@typescript-eslint/utils": "^8.8.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
+    "@typescript-eslint/rule-tester": "^8.8.1",
     "@typescript-eslint/typescript-estree": "^8.8.1",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "lodash": "^4.17.21",
     "prettier": "^3.3.3",
+    "rollup": "^4.24.0",
     "ts-jest": "^29.2.5",
+    "tslib": "^2.7.0",
     "typescript": "5.5.4",
     "typescript-eslint": "^8.8.1"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
-  },
-  "dependencies": {
-    "@typescript-eslint/rule-tester": "^8.8.1",
-    "@typescript-eslint/utils": "^8.8.1"
   }
 }
