--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
   "name": "@dczajkowski/eslint-plugin",
   "version": "0.6.0",
-  "main": "dist/index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "test": "jest",
-    "lint": "eslint . --ext .ts --max-warnings=0",
-    "build": "esbuild src/{*.ts,**/*.ts} --format=cjs --bundle --platform=node --external:espree --outdir=dist/",
-    "prepublish": "yarn build"
+    "lint": "eslint . --max-warnings=0",
+    "build": "rm -rf dist && rollup -c && mv dist/types/index.d.ts dist/index.d.ts && rm -rf dist/types"
   },
-  "devDependencies": {
-    "@types/eslint": "^8.4.3",
-    "@types/jest": "^28.1.2",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "@typescript-eslint/typescript-estree": "^5.28.0",
-    "esbuild": "^0.14.45",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
-    "lodash": "^4.17.21",
-    "path": "^0.12.7",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "eslint": ">=8.0.0"
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^5.28.0"
-  }
+    "@typescript-eslint/utils": "^8.8.1",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.0",
+    "@types/eslint": "^9.6.1",
+    "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^22.7.5",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "@typescript-eslint/rule-tester": "^8.8.1",
+    "@typescript-eslint/typescript-estree": "^8.8.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "rollup": "^4.24.0",
+    "ts-jest": "^29.2.5",
+    "tslib": "^2.7.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.8.1"
+  },
+  "peerDependencies": {
+    "eslint": ">=9.0.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
