--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
     }
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^8.8.1",
-    "typescript": "5.5.4",
+    "@typescript-eslint/utils": "^8.41.0",
+    "typescript": "^5.9.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.0",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/eslint": "^9.6.1",
-    "@types/jest": "^29.5.13",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^22.7.5",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "@typescript-eslint/rule-tester": "^8.8.1",
-    "@typescript-eslint/typescript-estree": "^8.8.1",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "@typescript-eslint/rule-tester": "^8.41.0",
+    "@typescript-eslint/typescript-estree": "^8.41.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-jest": "^28.14.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3",
-    "rollup": "^4.24.0",
-    "ts-jest": "^29.2.5",
-    "tslib": "^2.7.0",
-    "typescript-eslint": "^8.8.1"
+    "prettier": "^3.6.2",
+    "rollup": "^4.49.0",
+    "ts-jest": "^29.4.1",
+    "tslib": "^2.8.1",
+    "typescript-eslint": "^8.41.0"
   },
   "peerDependencies": {
     "eslint": ">=9.0.0"
