--- a/package.json
+++ b/package.json
@@ -2,25 +2,34 @@
   "name": "@dczajkowski/eslint-plugin",
   "version": "0.7.0-rc.1",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --max-warnings=0",
-    "build": "rm -rf dist && rollup -c && mv dist/types/index.d.ts dist/index.d.ts && rm -rf dist/types"
+    "build": "bash build.sh"
   },
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.mts",
+  "module": "./dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": {
+        "types": "./dist/index.d.mts",
+        "import": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "require": "./dist/index.cjs"
+      }
     }
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^8.41.0",
-    "lodash": "^4.17.21",
-    "typescript": "^5.9.2"
+    "@typescript-eslint/utils": "^8.42.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
@@ -28,23 +37,25 @@
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.18.0",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "@typescript-eslint/rule-tester": "^8.41.0",
-    "@typescript-eslint/typescript-estree": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "@typescript-eslint/rule-tester": "^8.42.0",
+    "@typescript-eslint/typescript-estree": "^8.42.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-jest": "^28.14.0",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "rollup": "^4.49.0",
+    "rollup": "^4.50.0",
     "ts-jest": "^29.4.1",
     "tslib": "^2.8.1",
-    "typescript-eslint": "^8.41.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.42.0"
   },
   "peerDependencies": {
-    "eslint": ">=9.0.0"
+    "eslint": "9.x",
+    "typescript": "5.x"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
