--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint . --max-warnings=0",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap --cjsInterop"
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap"
   },
   "type": "module",
   "main": "./dist/index.cjs",
